# PasswordGenerator

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  app.go  compile.py  go.mod  main.go  pubspec.yaml  pyproject.toml  wails.json
android/app/: build.gradle.kts
config/: get_files.py  languages.json  languages.xlsx
frontend/: .prettierrc.json  eslint.config.mjs  index.html  package.json  package.json.md5  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/constants/: colors.ts  i18n.ts  social-media.ts
frontend/src/enums/: i18n.ts
internal/app_settings/: window.go
internal/constants/: chars.go  user_preferences.go
internal/enums/: i18n.go
internal/password/: generate_password.go
internal/types/: background_colors.go  user_preferences.go
internal/ui_colors/: background_colors.go
internal/user_preferences/: user_preferences.go
internal/utils/: i18n.go
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app_settings/: app_settings.dart
lib/constants/: chars.dart  user_preferences.dart
lib/core/: password.dart
lib/enums/: user_preferences.dart
lib/handlers/: close_window.dart  social_media.dart
lib/l10n/: app_en.arb  app_es.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_es.dart
lib/utils/: clipboard.dart  notifications.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
src/app_logic/: confirm_close.py  generate_password.py
src/client/: app_settings.py  change_language.py  contact.py  create_buttons.py  create_dialog.py  create_inputs.py  create_text.py  main.py  taskbar.py
(+47 files in other folders)
